Fixed elements visibility

--- a/cms-ui/apps/editor-ui/src/app/content-frame/components/content-frame/content-frame.component.scss
+++ b/cms-ui/apps/editor-ui/src/app/content-frame/components/content-frame/content-frame.component.scss
@@ -89,5 +89,7 @@
         overflow: hidden;
     }
 
-
+    .hidden {
+        display: none !important;
+    }
 }
